src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Customer Support</fullName>
        <description>Customer Support Case Management Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed by customer</fullName>
        </values>
        <values>
            <fullName>GW in Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Updated by customer</fullName>
        </values>
        <values>
            <fullName>Verified</fullName>
        </values>
        <values>
            <fullName>Waiting for customer</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Guidewire Live</fullName>
        <description>Guidewire Live support process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Unassigned</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Proposal%2FContract</fullName>
        <description>Internal PS Support process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Unassigned</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Name_For_Search__c</fullName>
        <label>Account Name (For Search)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <label>Installation</label>
        <picklist>
            <picklistValues>
                <fullName>OnPremise</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hosted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Backup_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backup Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bug_Number__c</fullName>
        <label>Bug Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CS_3rd_Pty_Reference__c</fullName>
        <label>3rd Pty Reference #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Actual_Completion_Dt__c</fullName>
        <label>Actual Completion Dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Alternate_Reference__c</fullName>
        <description>Holds Jira Ticket Id</description>
        <label>Alternate Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Analysis__c</fullName>
        <description>What Analysis has been completed to date on this issue?</description>
        <inlineHelpText>What Analysis has been completed to date on this issue?</inlineHelpText>
        <label>Analysis</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_Asset_Name__c</fullName>
        <description>*** Service Cloud  Asset Name****</description>
        <formula>Asset.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Asset_Product_Version__c</fullName>
        <formula>Asset.CS_Product_Version__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Product Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Asset_Status__c</fullName>
        <formula>Text(Asset.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Assign_Override_Reas__c</fullName>
        <label>Case Owner Change Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Wrong initial assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workload management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Associated_Jira_URL__c</fullName>
        <description>Associated JIRA URL constructed from Associated Jira field</description>
        <label>Associated Jira URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CS_Associated_Jira__c</fullName>
        <description>**Please enter multiple Jira separated by comma and no space should be left in between.</description>
        <inlineHelpText>**Please enter multiple Jira seperated by comma and no space should be left in between.</inlineHelpText>
        <label>Associated Jira</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Author__c</fullName>
        <label>Author</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Business_Impact__c</fullName>
        <label>Business Impact</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_CC_Email_List__c</fullName>
        <inlineHelpText>Carbon Copy  Emails</inlineHelpText>
        <label>CC Email List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_CSAT_Exclusion__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Customer Satisfaction Survey Exclusion</inlineHelpText>
        <label>CSAT Exclusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Carbon_Copy_Email_10__c</fullName>
        <label>Carbon Copy Email 10</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CS_Carbon_Copy_Email_1__c</fullName>
        <description>**** Service Cloud - Carbon Copy Email Defaulted from Asset on Case *******</description>
        <label>Carbon Copy Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CS_Carbon_Copy_Email_2__c</fullName>
        <description>**** Service Cloud - CS Carbon Copy  Email 2 From Asset *******</description>
        <label>Carbon Copy Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CS_Case_Creator_Type__c</fullName>
        <description>User Type On Case for usage in Process Flow to Trigger Survey</description>
        <formula>Text(CreatedBy.UserType)</formula>
        <label>Case Creator Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Case_Forward_Comment__c</fullName>
        <label>Case Forward Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_Case_Owner_Change_Reason__c</fullName>
        <description>Case Owner change Reason</description>
        <label>DEL -Case Owner Change Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CS_Case_Owner__c</fullName>
        <formula>IF( 
     AND(OwnerId=&apos;00G29000000PwVt&apos;, $User.ProfileId=&apos;00e29000000LtAk&apos;), 
HYPERLINK(&apos;/&apos;&amp;Id&amp;&apos;/a?retURL=%2F&apos;&amp;Id &amp;&apos;isdtp=vw&apos;&amp;&apos;sfdcIFrameOrigin=https%3A%2F%2Fguidewire--gforcedev.cs19.my.salesforce.com&apos;,
Owner:Queue.QueueName &amp;&apos; [Change]&apos;,&apos;_self&apos;), 
IF(LEFT(OwnerId,3)=&quot;00G&quot;,Owner:Queue.QueueName, Owner:User.FirstName  &amp; Owner:User.LastName) 
)</formula>
        <inlineHelpText>Change Case Owner link will  be displayed only if you have access to change the case Owner</inlineHelpText>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Case_Record_Type__c</fullName>
        <description>*** Case Record Type Formula *****</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Case_Thread__c</fullName>
        <description>****Service Cloud Field to be used in Email Sent from Apex  on Subject Line****</description>
        <formula>&quot;ref:_&quot; &amp; LEFT($Organization.Id,5) &amp; SUBSTITUTE(RIGHT($Organization.Id,11), &quot;0&quot;, &quot;&quot; )&amp; &quot;._&quot; &amp; LEFT(Id,5) &amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(Id,5) &amp; &quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Thread</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Case_Type__c</fullName>
        <label>Case Type</label>
        <picklist>
            <picklistValues>
                <fullName>Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Questions</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Case_Url__c</fullName>
        <description>*** Service Cloud Case Link ******</description>
        <formula>HYPERLINK( $Setup.CS_Community_Survey_URL__c.CS_Internal_URL__c&amp;&apos;/&apos;&amp; Id ,&apos;Click here&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Closed_Incident_Watch_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to identify Closed Incident Watch List</description>
        <label>Closed Incident Watch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Closed_Review_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed Review Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Community_URL__c</fullName>
        <description>*** Service Cloud Community Case link for Customer email ******</description>
        <formula>CASE(CreatedBy.ProfileId , 
$Setup.CS_Profile_Id__c.CS_Customer_Profile__c, 
$Setup.CS_Community_Survey_URL__c.CS_Customer_Community_URL__c&amp;&apos;s/case/&apos;&amp; Id , 
$Setup.CS_Profile_Id__c.CS_Customer_Profile__c, 
$Setup.CS_Community_Survey_URL__c.CS_Partner_Community_URL__c&amp;&apos;s/case/&apos;&amp; Id , 
$Setup.CS_Community_Survey_URL__c.CS_Internal_URL__c&amp;&apos;s/case/&apos;&amp; Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Contact_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Licensed Product</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>CS_Asset_Contact_Permissions__c.CS_Contact__c</field>
                <operation>equals</operation>
                <valueField>$User.ContactId</valueField>
            </filterItems>
            <filterItems>
                <field>CS_Asset_Contact_Permissions__c.CS_IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>CS_Asset_Contact_Permissions__c.CS_Access_Type__c</field>
                <operation>equals</operation>
                <value>Customer Support, Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CS_Asset_Contact_Permissions__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Current_GoLive_Product_version__c</fullName>
        <formula>Asset.CS_CurGoLive_ProdVers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Go Live Product version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Current_Implementation_Date__c</fullName>
        <formula>Asset.CS_GW_SC_ImpDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Current_Status__c</fullName>
        <inlineHelpText>The Current Status for this Issue, as of now, not all history to date.</inlineHelpText>
        <label>Current Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_Customer_Case_Closed_Date__c</fullName>
        <description>Date customer requested to close the case</description>
        <label>Customer Case Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Customer_Reference_Number__c</fullName>
        <inlineHelpText>The ticket number that is in the Customer&apos;s tracking system</inlineHelpText>
        <label>Customer Reference #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Date_Reported_Override_Reason__c</fullName>
        <label>Date Reported Override Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Reported time differs from inc creation</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Date_Reported__c</fullName>
        <label>Date Reported</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CS_Detailed_Action_Plan_Comments__c</fullName>
        <description>Detailed Action Plan Comments</description>
        <label>Detailed Action Plan Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CS_Detailed_Action_Plan_Reason__c</fullName>
        <label>Detailed Action Plan Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Initial Severity Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Requested Modification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresponsive Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ActionPlan delivery incorrectly captured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ActionPlan delivery not captured</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Detailed_Action_Plan_Status__c</fullName>
        <description>Detailed action plan status</description>
        <label>Detailed Action Plan Status</label>
        <picklist>
            <picklistValues>
                <fullName>Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Disposition__c</fullName>
        <label>Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Perf issue diagnosed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer to change configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer lacks product knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer not following best practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance practices not followed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workaround suggested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product issue with no workaround</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need KB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Tech Bulletin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation issue, high level direction provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation issue, beyond scope of Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suggested Guidewire Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue outside of Guidewire product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accelerator issue with product issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accelerator issue and not product issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnostic patch used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Root cause found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Root cause not found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Product Support Matrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs internal escalation to CIM/CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doc. JIRA Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform JIRA Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug JIRA Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform Gap JIRA Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Direction Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functionality Clarified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could Not Reproduce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Closed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CS_Environment__c</fullName>
        <formula>Text(Asset.Status)</formula>
        <inlineHelpText>Asset Environment Status</inlineHelpText>
        <label>Environment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Escalation_Status__c</fullName>
        <formula>IF( IsEscalated , IMAGE(&apos;/resource/alert&apos;,&apos;Case Escalated&apos;,30,30) ,&apos;&apos;)</formula>
        <inlineHelpText>Case Escalated</inlineHelpText>
        <label>Escalation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Exclude_from_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from  SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Final_Resolution_Date__c</fullName>
        <label>Final Resolution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CS_Initial_Resolution_Date__c</fullName>
        <label>Initial Resolution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CS_Initial_Response_Target_Reason__c</fullName>
        <label>Initial Response Target Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Initial Severity Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Requested Modification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresponsive Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response not captured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response incorrectly captured</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Initial_Response_Target_Status__c</fullName>
        <description>Initial response target status</description>
        <label>Initial Response Target Status</label>
        <picklist>
            <picklistValues>
                <fullName>Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Initial_response_Comments__c</fullName>
        <description>Initial response override comments</description>
        <label>Initial response Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CS_KB_Article_Comments__c</fullName>
        <inlineHelpText>Comments on why a KB article is not required.</inlineHelpText>
        <label>New KB Article Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_KB_Article_ID__c</fullName>
        <label>KB Article ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_KB_Article_Required__c</fullName>
        <inlineHelpText>Is this eligible to convert to a KB article?</inlineHelpText>
        <label>New KB Article Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_KB_Justification__c</fullName>
        <label>Justification for No KB</label>
        <picklist>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Gap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug: No workaround</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Relevant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RightNow Administration</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Lead_Attention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CS Lead Attention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Milestone_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone 1 - Response Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Milestone_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone 2 - Prelim AP Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Milestone_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone 3 - Detailed AP Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Need_to_Monitor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Need to Monitor flag for critical cases to ensure that &quot;follow the sun&quot; cases are tracked around the clock.</description>
        <label>Need to Monitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Next_Action__c</fullName>
        <description>Next Action</description>
        <label>Next Action</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Enablement Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Demand Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accelerators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote Consulting Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Assurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RDC - Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT HelpDesk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RDC - France</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_ODC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>On Demand Consulting</description>
        <label>ODC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Owner_Org_Id__c</fullName>
        <formula>BLANKVALUE(Asset.Name, Asset.Parent.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Org Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Owner_Profile__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Owner_Team__c</fullName>
        <formula>IF( ISBLANK(Owner:User.Id),  CASE( Owner:Queue.QueueName , 
                                   	&apos;Support&apos;, &apos;Support&apos;,
                                        &apos;Implementation Queue&apos;, &apos;Enablement Queue&apos;,
&apos;ODC&apos;,&apos;ODC&apos;,
                                        &apos;Other&apos;) ,
                             TEXT(Owner:User.CS_User_Team__c) )</formula>
        <label>Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Parent_AssetId__c</fullName>
        <description>Case Assets Paren Id</description>
        <formula>Asset.Parent.Id</formula>
        <label>Parent AssetId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Parent_Asset_Name__c</fullName>
        <formula>Asset.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Asset Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Platform_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Platform Issue</description>
        <label>Platform Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Preliminary_Action_Plan_Comments__c</fullName>
        <description>Preliminary Action Plan Comments</description>
        <label>Preliminary Action Plan Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CS_Preliminary_Action_Plan_Reason__c</fullName>
        <description>Preliminary action plan reason</description>
        <label>Preliminary Action Plan Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Initial Severity Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Requested Modification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresponsive Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ActionPlan delivery incorrectly captured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ActionPlan delivery not captured</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Preliminary_Action_Plan_Status__c</fullName>
        <description>Preliminary action plan status</description>
        <label>Preliminary Action Plan Status</label>
        <picklist>
            <picklistValues>
                <fullName>Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Primary_Support_Contact__c</fullName>
        <formula>Asset.CS_Primary_Supp_Partner__r.FirstName +&apos; &apos;+ Asset.CS_Primary_Supp_Partner__r.LastName</formula>
        <label>Primary Support Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Product_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Version</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CS_Release__c.CS_Product__c</field>
                <operation>equals</operation>
                <valueField>$Source.ProductId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CS_Release__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Project_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Project Assignment</inlineHelpText>
        <label>Project Assignment</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>pse__Assignment__c.pse__Resource__r.pse__Salesforce_User__c</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>pse__Assignment__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Public_Comment_By_Internal_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Comment By Internal User</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>